--- a/css/styles.css
+++ b/css/styles.css
@@ -1,1 +1,8 @@
- '
+.heading {
+  margin-left: 50px;
+  margin-right: 50px;
+  margin-top: -20px;
+  background-image: linear-gradient(#00ffff, #76D7C4);
+  height: 200px;
+  font-size: 0.8cm
+}
