--- a/css/styles.css
+++ b/css/styles.css
@@ -6,3 +6,12 @@
   height: 200px;
   font-size: 0.8cm
 }
+
+.header1 {
+  letter-spacing: 0.0666667em;
+  font-size: 2.5cm;
+  font-weight: bold;
+  margin-left: 300px;
+  color: white;
+}
+
