--- a/css/styles.css
+++ b/css/styles.css
@@ -68,3 +68,23 @@
   font-family: monospace;
 }
 
+#button3 {
+  border-radius: 12px;
+  margin-top: 30px;
+  width: 150px;
+  background-color: #76D7C4;
+  color: white;
+  font-size: 0.5cm;
+  margin-left: 20px;
+}
+
+.btn {
+  border-radius: 50%;
+  margin-top: 30px;
+  width: 150px;
+  background-color: #76D7C4;
+  color: black;
+  font-size: 0.5cm;
+  margin-left: 20px;
+  margin-top: 10px;
+}
