change header background colour

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@
   margin-left: 50px;
   margin-right: 50px;
   margin-top: -20px;
-  background-image: linear-gradient(#00ffff, #76D7C4);
+  background-image: linear-gradient(#47a2c9, #4cd4b0);
   height: 200px;
   font-size: 0.8cm
 }
