change read more colour

--- a/css/styles.css
+++ b/css/styles.css
@@ -82,7 +82,7 @@
   border-radius: 50%;
   margin-top: 30px;
   width: 150px;
-  background-color: #76D7C4;
+  background-color: #d15ecf;
   color: black;
   font-size: 0.5cm;
   margin-left: 20px;
